Changed Layout, adjusted style

--- a/pcg_front.html
+++ b/pcg_front.html
@@ -25,29 +25,6 @@
 		<img src="pcglogo.jpg" alt="The Park City Gazette" />
   
 	</header> 
-   
-	<nav class="storiesinside">
-		<h2> Stories Inside </h2>
-        <div  class="left">
-		<ul>
-            <li><a href="#">Complete Marathon Results</a></li>
-            <li><a href="#">National Park Acquires Land</a></li>
-            <li><a href="#">School Board Election Results</a></li>
-            <li><a href="#">Spending Referendum Defeated</a></li>
-            <li><a href="#">Graduation Awards</a></li>
-        </ul>
-		</div>
-		<div class="right">
-		<ul>
-			<li><a href="#">New Highway Proposed</a></li>
-            <li><a href="#">Camping Tips</a></li>
-            <li><a href="#">Cougar Sightings Increase</a></li>
-            <li><a href="#">Editorials</a></li>
-            <li><a href="#">Park City Profile</a></li>
-         </ul>
-		 </div>
-     </nav>	
-	 
 	
 	  
 	<nav class="sidemenu">
@@ -61,6 +38,7 @@
 			<li><a href="#">Sports</a></li>
 			<li><a href="#">Weather </a></li>
 		</div>
+		
 		<div id="group2">
 			<li><a href="#">Classifieds</a></li>
 			<li><a href="#">For Sale</a></li>
@@ -69,6 +47,7 @@
 			<li><a href="#">Real Estate</a></li>
 			<li><a href="#">Personal </a></li>
 		</div>
+		
 		<div id="group3">
 			<li><a href="#">Tourism</a></li>
 			<li><a href="#">Attractions</a></li>
@@ -76,11 +55,38 @@
 			<li><a href="#">Parks</a></li>
 			<li><a href="#">Camping </a></li>
 		</div>
+		
 		<div id="group4">
 			<li><a href="#">Subscriptions</a></li>
 			<li><a href="#">Contact Us </a></li>
 		</div>
 	</nav>
+	
+	<nav class="stories-inside">
+		<h2> Stories Inside </h2>
+		
+        <div  class="left">
+			<ul>
+				<li><a href="#">Complete Marathon Results</a></li>
+				<li><a href="#">National Park Acquires Land</a></li>
+				<li><a href="#">School Board Election Results</a></li>
+				<li><a href="#">Spending Referendum Defeated</a></li>
+				<li><a href="#">Graduation Awards</a></li>
+			</ul>
+		</div>
+		
+		<div class="right">
+			<ul>
+				<li><a href="#">New Highway Proposed</a></li>
+				<li><a href="#">Camping Tips</a></li>
+				<li><a href="#">Cougar Sightings Increase</a></li>
+				<li><a href="#">Editorials</a></li>
+				<li><a href="#">Park City Profile</a></li>
+			</ul>
+		</div>
+    </nav>	
+	 
+
 <content>
 <!-- story 1 -->
 
